# Stratum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  photocuring_gcode.md
examples/: example.cpp  generate_gcode_test.cpp  parse_gcode_test.cpp
src/: gcode_generator.h  gcode_parser.h
tests/: test_generate_gcode.cpp  test_parse_gcode.cpp  test_parse_photocuring_gcode.cpp  test_parser.cpp
tests/gcode/: photocuring_above.gcode  photocuring_below.gcode
